--- a/style_index.css
+++ b/style_index.css
@@ -204,8 +204,11 @@
 .best .bestBikes .BBike .buttonContainer button{
   align-self: flex-end;
   font-size: 1em;
-  padding: 10px;
+  padding: 1px;
   text-align: center;
+  border-radius:15px;
+  width: 60px;
+
  
 }
 
@@ -230,6 +233,7 @@
 
   .best .bestBikes .BBike .buttonContainer button{
     width: 62.5px;
+    border-radius:20px;
   }
 }
 @media screen and (min-width:768px) {
@@ -240,6 +244,7 @@
 
   .best .bestBikes .BBike .buttonContainer button{
     width: 120px;
+    border-radius:25px;
   }
 }
 
@@ -252,6 +257,7 @@
 
   .best .bestBikes .BBike .buttonContainer button{
     width: 150px;
+    border-radius:40px;
   }
 }
 
@@ -262,7 +268,8 @@
   }
 
   .best .bestBikes .BBike .buttonContainer button{
-    width: 175px;
+    width: 300px;
+    border-radius:80px;
   }
 }
 
