--- a/style_index.css
+++ b/style_index.css
@@ -326,7 +326,7 @@
 .rent > h1{
   background-color: antiquewhite;
   width: 100%;
-  text-align: right;
+  text-align: center;
   padding: 1em;
   font-size: 4em;
 }
@@ -351,7 +351,7 @@
 
 @media screen and (max-width:768px) {
   .rent > h1{
-    font-size: 1.7em;
+    font-size: 1.6em;
   }
 }
 
