--- a/style_index.css
+++ b/style_index.css
@@ -320,6 +320,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  row-gap: 12em;
 }
 
 .rent > h1{
@@ -373,6 +374,13 @@
   .rent > h1{
     font-size: 1.1em;
   }
+}
+
+
+.rent .Bikes{
+ min-height: 110vh;
+  width: 100%;
+  background-color: rgb(50, 50, 50);
 }
 
 .after{
