--- a/style_common.css
+++ b/style_common.css
@@ -145,3 +145,73 @@ body{
 .menu ul li:hover a{
     color: rgb(255, 0, 0);
 }
+
+.enav{
+
+    background-color: rgb(37, 37, 37);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    row-gap: 1em;
+   
+}
+
+.enav .navMenu{
+    display: flex;
+    justify-content: space-between;
+    align-items:  baseline;
+    width: 100%;
+    color: rgb(238, 238, 238);
+    padding: 20px 30px;
+    text-align: center;
+    column-gap: 2.5em;
+}
+
+.enav .navMenu .location h3{
+    font-size: clamp(1em,10vw,4em);
+    font-weight: 1;
+    
+}
+
+.enav .navMenu .location li a{
+    color: rgb(238, 238, 238);
+    font-size: clamp(1em,10vw,3em);
+
+}
+
+.enav .navMenu .location li a:hover{
+   color: rgb(255, 0, 0);
+   border-bottom: 4px solid rgb(238, 238, 238);
+}
+.enav .navMenu .location li a:active{
+   color: rgb(255, 0, 0);
+   border-bottom: 4px solid rgb(238, 238, 238);
+}
+
+
+.enav .navMenu .eMenu li a{
+
+    color: rgb(238, 238, 238);
+    font-size: clamp(1em,10vw,3em);
+
+}
+.enav .navMenu .eMenu li a:hover{
+
+    color: rgb(255, 0, 0);
+   border-bottom: 4px solid rgb(238, 238, 238);
+
+}
+.enav .navMenu .eMenu li a:active{
+
+   color: rgb(255, 0, 0);
+   border-bottom: 4px solid rgb(238, 238, 238);
+
+}
+
+.enav > h1{
+    padding-top: 10px;
+    font-size: clamp(5em,10vw,10000000000em);
+    text-align: center;
+    color: rgb(255, 255, 255);
+    
+}
