--- a/style_common.css
+++ b/style_common.css
@@ -207,11 +207,37 @@ body{
    border-bottom: 4px solid rgb(238, 238, 238);
 
 }
-
-.enav > h1{
-    padding-top: 10px;
-    font-size: clamp(5em,10vw,10000000000em);
-    text-align: center;
-    color: rgb(255, 255, 255);
+.enav .end{
+  
+    display: flex;
+    justify-content: space-between; 
+    align-items: baseline;
+    padding: 0% 5px;
     
+}
+
+.enav .end h1 a{
+    
+    font-size: clamp(1em,10vw,3em);
+    color: rgb(238, 238, 238);
+    
+}
+
+.enav .end h1 a:hover{
+
+    color: rgb(255, 0, 0);
+   
+
+}
+.enav .end h1 a:active{
+
+   color: rgb(255, 0, 0);
+   
+
+}
+.enav .end p{
+    
+    text-align: center;
+    font-size: clamp(0.7em,4vw,1.5em);
+    color: rgb(238, 238, 238);
 }
